--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 allure-pytest
-pytest
+allure-python-commons
+beautifulsoup4
+exchangelib
+pytest>=4.0.1
+requests
+requests-toolbelt
 selenium
+seleniumwrapper
